adjust map when floater is docked

--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -115,6 +115,10 @@
 .floater-header .widget-undock, .floater-header .widget-dock {
     display: none;
 }
+.floater.dockable.docked {
+    position: relative;
+    float: left;
+}
 .floater.dockable.docked .floater-header  {
     cursor: default;
 }
