--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -7,6 +7,8 @@
 			</div>
 		</div>
 	</div>
+	<div class="floater-warning">
+	</div>
 	<div class="floater-body">
 	</div>
 	<div class="floater-footer">
