--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -15,3 +15,43 @@
 	border-radius: 0;
 	padding: 0;
 }
+
+/* Floater body */
+
+#floater-world-wind-widget .floater-body {
+	height: calc(100% - 2rem);
+	padding: 0;
+}
+#world-wind-widget-3Dmap-switch {
+	padding: .5rem .3rem;
+}
+
+/* Panels */
+#floater-world-wind-widget-panels {
+}
+.panel-header {
+	color: #eee;
+	cursor: pointer;
+	background: rgba(67, 66, 84,.8);
+	border-bottom: 1px solid rgb(67, 66, 84);
+	line-height: 1.8rem;
+	padding: 0 .5rem;
+	position: relative;
+}
+.panel-header:first-child {
+	border-top: 1px solid rgb(67, 66, 84);
+}
+.panel-header h3 {
+	/*display: inline-block;*/
+}
+.panel-header .panel-icon {
+	background: url(../../../../img/arrow-white-up.png) no-repeat center center;
+	width: 20px;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	right: .3rem;
+}
+.panel-body {
+
+}
