--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.html
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.html
@@ -1,1 +1,20 @@
-<div class="warning"></div>
+<div id="{{panelsId}}">
+	<div class="panel-header"><h3>Section 1</h3><div class="panel-icon arrow-up"></div></div>
+	<div class="panel-body">
+		<p>
+			Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+			ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+			amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+			odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+		</p>
+	</div>
+	<div class="panel-header"><h3>Section 2</h3><div class="panel-icon arrow-up"></div></div>
+	<div class="panel-body">
+		<p>
+			Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+			ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+			amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+			odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+		</p>
+	</div>
+</div>
