--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -3,8 +3,11 @@
 	top: 10rem;
 	min-width: 22rem;
 	max-width: 40rem;
+	height: 10rem;
 }
-
+#floater-world-wind-widget.dockable {
+	height: 25rem;
+}
 #floater-world-wind-widget.docked {
 	position: absolute;
 	top: 0;
@@ -16,11 +19,24 @@
 	padding: 0;
 }
 
-/* Floater body */
+#floater-world-wind-widget .widget-panels {
+	display: none;
+}
+#floater-world-wind-widget.dockable .widget-panels {
+	display: block;
+}
 
+/* Floater body */
 #floater-world-wind-widget .floater-body {
-	height: calc(100% - 2rem);
-	padding: 0;
+	 height: calc(100% - 2rem);
+	 padding: 0;
+}
+#floater-world-wind-widget .checkbox-row {
+	transition: background .3s ease-out;
+}
+#floater-world-wind-widget .checkbox-row:hover {
+	background: rgb(235,235,235);
+	cursor: pointer;
 }
 #world-wind-widget-3Dmap-switch {
 	padding: .5rem .3rem;
@@ -33,13 +49,17 @@
 	color: #eee;
 	cursor: pointer;
 	background: rgba(67, 66, 84,.8);
-	border-bottom: 1px solid rgb(67, 66, 84);
+	border-bottom: 1px solid white;
 	line-height: 1.8rem;
 	padding: 0 .5rem;
 	position: relative;
+	transition: background .3s ease-out;
+}
+.panel-header:hover {
+	background: rgba(67, 66, 84, .9);
 }
 .panel-header:first-child {
-	border-top: 1px solid rgb(67, 66, 84);
+	border-top: 1px solid white;
 }
 .panel-header h3 {
 	/*display: inline-block;*/
@@ -52,6 +72,9 @@
 	top: 0;
 	right: .3rem;
 }
+.panel-header.closed .panel-icon {
+	background: url(../../../../img/arrow-white-down.png) no-repeat center center;
+}
 .panel-body {
-
+	padding: .3rem .3rem .5rem;
 }
