--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidgetPanel.html
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidgetPanel.html
@@ -1,4 +1,4 @@
-<div class="panel-header" id="{{panelId}}-panel-header"><h3>{{name}}</h3><div class="panel-icon arrow-up"></div></div>
-<div class="panel-body" id="{{panelId}}-panel-body">
-	Content...
+<div class="panel-header open" id="{{panelId}}-panel-header"><h3>{{name}}</h3><div class="panel-icon arrow-up"></div></div>
+<div class="panel-body open" id="{{panelId}}-panel-body">
+	<p>Content...</p>
 </div>
