--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidgetPanel.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidgetPanel.css
@@ -1,21 +1,21 @@
 .panel-header {
-	background: rgba(67, 66, 84,.8);
+	background: rgba(67, 66, 84,.6);
 	border-bottom: 1px solid white;
-	color: #eee;
+	color: #f7f7f7;
 	cursor: pointer;
-	line-height: 1.8rem;
+	line-height: 1.9rem;
 	padding: 0 .5rem;
 	position: relative;
 	transition: background .3s ease-out;
 }
 .panel-header:hover {
-	background: rgba(67, 66, 84, .9);
+	background: rgba(67, 66, 84, .7);
 }
 .panel-header:first-child {
 	border-top: 1px solid white;
 }
 .panel-header h3 {
-	/*display: inline-block;*/
+	font-size: .8rem;
 }
 .panel-header .panel-icon {
 	background: url(../../../../img/arrow-white-down.png) no-repeat center center;
@@ -30,8 +30,19 @@
 }
 .panel-body {
 	display: none;
-	padding: .3rem .3rem .5rem;
+	padding: 0.05rem 0 .5rem;
 }
 .panel-body.open {
 	display: block;
+}
+.panel-body .floater-row {
+	border-bottom: 1px solid #e7e7e7;
+}
+.panel-body .floater-row a {
+	padding: 0 .3rem;
+	height: 1.7rem;
+	line-height: 1.6rem;
+}
+.panel-body .floater-row .radiobox-label {
+	font-weight: normal;
 }
