--- a/src/__new/js/view/widgets_3D/Floater3D.html
+++ b/src/__new/js/view/widgets_3D/Floater3D.html
@@ -2,6 +2,12 @@
 	<div class="floater3D-header">
 		<h2 class="floater3D-title">{{name}}</h2>
 		<div class="floater3D-tools">
+			<div class="floater3D-make-floating">
+				Make floating
+			</div>
+			<div class="floater3D-maximise">
+				Maximise
+			</div>
 			<div class="floater3D-close">
 				Close
 			</div>
