--- a/src/__new/js/view/widgets_3D/Placeholder3D.css
+++ b/src/__new/js/view/widgets_3D/Placeholder3D.css
@@ -21,6 +21,10 @@
 	background: rgba(201,45,66,1);
 	right: 0;
 }
+.placeholder3D.activated {
+	background: rgba(201,45,66,.5);
+	right: 0;
+}
 .placeholder3D-icon {
 	color: white;
 	font-size: 1rem;
