position of select and snapshot button

--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -461,6 +461,7 @@
 }
 .newDesign #app-tools-actions span {
     color: #555;
+    top: 5px;
 }
 .newDesign .btn-map-tool span.x-btn-inner {
     color: #555;
