--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -2,7 +2,10 @@
 	<div class="feature-info-window-header">
 		<div class="feature-info-title">Feature name (GID)</div>
 		<div class="feature-info-close">
-			<img title="close-button" src="__new/img/close.png">
+			<img title="Close" src="__new/img/close.png">
+		</div>
+		<div class="feature-info-settings">
+			<img title="Settings" src="__new/img/settings-gray.png">
 		</div>
 	</div>
 	<div class="feature-info-window-body">
