--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidgetPanel.html
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidgetPanel.html
@@ -1,3 +1,6 @@
-<div class="panel-header open" id="{{panelId}}-panel-header"><h3>{{name}}</h3><div class="panel-icon arrow-up"></div></div>
-<div class="panel-body open" id="{{panelId}}-panel-body">
+<div id="{{panelId}}-panel">
+	<div class="panel-header open" id="{{panelId}}-panel-header"><h3>{{name}}</h3><div class="panel-icon arrow-up"></div>
+	</div>
+	<div class="panel-body open" id="{{panelId}}-panel-body">
+	</div>
 </div>
