--- a/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.css
@@ -29,9 +29,18 @@
 .panel-body {
 	display: none;
 	padding: 0.05rem 0 .5rem;
+	position: relative;
 }
 .panel-body.open {
 	display: block;
+}
+.panel-body .layer-row {
+	height: 1.8rem;
+}
+.panel-body .layer-row a {
+	position: relative;
+	float: left;
+	width: auto;
 }
 .panel-body .floater-row {
 	border-bottom: 1px solid #e7e7e7;
