--- a/src/__new/js/view/widgets/inputs/checkbox/Checkbox.html
+++ b/src/__new/js/view/widgets/inputs/checkbox/Checkbox.html
@@ -1,4 +1,4 @@
-<div class="floater-row checkbox-row {{class}}" id="{{id}}" data-id="{{dataId}}">
+<div title="{{name}}" class="floater-row checkbox-row {{class}}" id="{{id}}" data-id="{{dataId}}">
     <a href="#">
         <div class="checkbox-icon"></div><div class="checkbox-label">{{name}}</div>
     </a>
