--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -580,7 +580,7 @@ body.application #sidebar-reports {
 	width: 100%;
 	z-index: 10000;
 	background-color: #f4f3ef;
-
+	border-top: 0px solid #ddd;
 	display: none; /* useWBFooter toggle default */
 	height: 0; /* useWBFooter toggle default */
 }
@@ -591,12 +591,12 @@ body.application #sidebar-reports {
 
 #footer ul,
 #footer p {
-	margin-bottom: 5px;
+/* 	margin-bottom: 5px; */
 }
 
 #footer ul:last-child,
 #footer p:last-child {
-	margin-bottom: 0;
+/* 	margin-bottom: 0; */
 }
 
 #footer a:hover,
@@ -604,67 +604,15 @@ body.application #sidebar-reports {
 	text-decoration: underline;
 }
 
-#footer-bar {
-	background-color: #f4f3ef;
-	padding: 10px;
-}
-
-#footer-bar a {
-	color: #111c24;
-}
-
-#footer-bar a.wb {
-	background: url("../images/wbg-footer-en.gif") no-repeat 0 50%;
-	padding-left: 30px;
-	text-transform: uppercase;
-	font-weight: bold;
-	display: inline-block;
-	width: 162px;
-	height: 33px;
-	line-height: 35px;
-	vertical-align: middle;
-	font-size: 11px;
-}
-
-#footer-bar a.wb span {
-	display: none;
-}
-
-#footer-bar ul {
-	font-size: 13px;
-	height: 35px;
-	display: inline-block;
-	vertical-align: middle;
-	margin-left: 20px;
-	padding-left: 10px;
-	border-left: 1px solid #bbb;
-}
-
-#footer-bar ul li {
-	float: left;
-	height: 35px;
-}
-
-#footer-bar ul li a {
-	height: 35px;
-	line-height: 35px;
-	display: block;
-	padding: 0 10px;
-	font-weight: bold;
-	color: #111c24;
-}
-
 #footer-legal {
-	background-color: #f4f3ef;
 	margin: 0 10px;
-	padding: 10px 0;
+	padding: 6px 0;
 	font-size: 12px;
-	color: #333;
-	border-top: 1px solid #d3d2d2;
+	color: #707070;
 }
 
 #footer-legal a {
-	color: #333;
+	color: #999;
 }
 
 #footer-legal .contact {
@@ -672,21 +620,27 @@ body.application #sidebar-reports {
 	text-align: right;
 }
 
+#footer-legal p, #footer-legal ul {
+	display: inline-block;
+}
+
 #footer-legal ul {
 	overflow: hidden;
+	vertical-align: top;
+	margin-left: 7px;
 }
 
 #footer-legal ul li {
-	float: left;
-	padding-left: 5px;
-	margin-left: 5px;
-	border-left: 1px solid #aaa;
+	display: inline-block;
+	padding-left: 8px;
+	margin-left: 4px;
+	border-left: 1px solid #d2d2d2;
 }
 
 #footer-legal ul li:first-child {
-	padding-left: 0;
+/* 	padding-left: 0; */
 	margin-left: 0;
-	border-left: none;
+/* 	border-left: none; */
 }
 
 /* Loading screen */
