--- a/src/__new/js/view/settings/Settings.css
+++ b/src/__new/js/view/settings/Settings.css
@@ -13,12 +13,15 @@
 	position: absolute;
 	top: 8rem;
 	left: calc(50% - 17.5rem);
-	z-index: 99999;
+	z-index: 10001;
 	resize: both;
 	overflow: auto;
 }
 .tool-window.open {
 	display: block;
+}
+.tool-window.active {
+	z-index: 11000;
 }
 
 /* header */
