--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -36,7 +36,7 @@
     border-bottom: 1px solid #222;
 }
 .newDesign #wb-header a {
-    background: url('../images/new/world-bank-logo.png') no-repeat center center;
+    background: url('../images/new/world-bank-logo.png') no-repeat 5px 5px;
 }
 .newDesign #header {
     background: #333;
