--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -39,13 +39,17 @@
     background: url('../images/new/world-bank-logo.png') no-repeat 5px 5px;
 }
 .newDesign #header {
-    background: #333;
-    border-bottom: 2px solid rgb(36, 36, 49);
+    background: #434254;
+    /* border-bottom: 2px solid rgb(36, 36, 49); */
     padding-left: 5px;
     z-index: 10000;
 }
-.newDesign #header .home {
-    left: 15px;
+.newDesign #header h1 {
+    display: inline-block;
+    margin: 0;
+    font-size: 21px;
+    line-height: 45px;
+    /* height: 45px; */
 }
 .newDesign #header .menu li:before {
     background-color: #888;
@@ -59,12 +63,13 @@
     padding: 0 15px;
 }
 .newDesign #header .user {
-    background: #333;
+    /* background: #333; */
     height: 28px;
     padding-right: 10px;
     position: absolute;
     display: inline-block;
     right: 0;
+    top: 8px;
 }
 .newDesign #header .user .sep {
     width: 1px;
