--- a/src/css/toggles.css
+++ b/src/css/toggles.css
@@ -24,7 +24,7 @@
 /* useHeader */
 .toggle-useHeader #header {
 	display: block;
-	height: 30px;
+	height: 45px;
 }
 .toggle-useHeader #main {
 	padding-top: 30px;
@@ -33,7 +33,7 @@
 	padding-top: 120px;
 }
 .toggle-useHeader #content-application {
-	top: 30px;
+	top: 45px;
 }
 
 /* useHeader && useWBHeader */
@@ -44,10 +44,10 @@
 	padding-top: 70px;
 }
 .toggle-useWBHeader.toggle-useHeader body.application #main {
-	padding-top: 160px;
+	padding-top: 175px;
 }
 .toggle-useWBHeader.toggle-useHeader #content-application {
-	top: 70px;
+	top: 85px;
 }
 
 /* useWBFooter */
@@ -64,6 +64,11 @@
 .toggle-usePumaLogo .fields-holder > .label {
 	background: url(../images/puma-logo.png) no-repeat 0 8px;
 	padding-left: 81px;
+}
+.toggle-usePumaLogo #header h1 {
+	background: url(../images/puma-logo.png) no-repeat 7px 4px;
+	background-size: 14%;
+	padding-left: 54px;
 }
 
 /* allowDownloadsLink */
