--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -470,6 +470,40 @@ body.intro #content-intro-terms {
 	width: 100%;
 }
 
+#view-selector {
+	width: 100%;
+	height: 40px;
+	background-color: #434254;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding-left: 15px;
+}
+
+#view-selector > .group {
+	display: inline-block;
+}
+
+#view-selector .field {
+	display: inline-block;
+	/* width: 210px; */
+	margin-right: 20px;
+}
+
+#view-selector .field > div {
+	display: inline-block;
+}
+
+#view-selector .field .label {
+	padding-right: 10px;
+	vertical-align: top;
+	line-height: 30px;
+	color: white;
+	font-family: "Open Sans", sans-serif;
+	font-size: 11px;
+	font-weight: 700;
+}
+
 #toolbar {
 	width: 100%;
 	height: 90px;
