--- a/src/css/project/eea.css
+++ b/src/css/project/eea.css
@@ -58,7 +58,7 @@
 }
 
 /* Header === */
-.eea #toolbar {
+.eea #legacy-view-selector {
 	background-color: rgb(0, 63, 95);
 	border-bottom: 2px solid #006699;
 }
@@ -215,7 +215,7 @@
 /* ================================ */
 
 @media screen and (max-width: 1270px){
-	.eea #toolbar > .label {
+	.eea #legacy-view-selector > .label {
 		width: 85px;
 	}
 }
