--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,7 +5,7 @@
 }
 
 @media screen and (max-width: 1140px) {
-	#toolbar > .label {
+	#legacy-view-selector > .label {
 		width: 70px;
 		padding-left: 70px;
 		overflow: hidden;
@@ -13,7 +13,7 @@
 }
 
 @media screen and (max-width: 950px) {
-	#toolbar > .label {
+	#legacy-view-selector > .label {
 		display: none;
 	}
 }
